<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_Welcome"
        android:textSize="36sp"
        android:theme="@style/Theme.TimeManager.Widget.TextView.HeadLine"
        app:layout_constraintBottom_toTopOf="@+id/WelcomeActivity_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/WelcomeActivity_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_Welcome_PromptText"
        android:theme="@style/Theme.TimeManager.Widget.TextView.SubText"
        app:layout_constraintBottom_toTopOf="@+id/WelcomeActivity_TableNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/WelcomeActivity_TableNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/activity_Welcome_EditTextHint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/WelcomeActivity_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/WelcomeActivity_Button"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/skyBlue"
        android:text="@string/activity_Welcome_StartButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/WelcomeActivity_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/WelcomeActivity_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>